--- a/src/Resources/app/administration/src/module/mollie-payments/components/mollie-pluginconfig-support-modal/mollie-pluginconfig-support-modal.html.twig
+++ b/src/Resources/app/administration/src/module/mollie-payments/components/mollie-pluginconfig-support-modal/mollie-pluginconfig-support-modal.html.twig
@@ -15,32 +15,58 @@
             </sw-alert>
 
             <sw-container columns="1fr 1fr" gap="16px">
-                <sw-text-field v-model:value="name" v-model="name"
-                               class="input-name"
-                               :label="$tc('mollie-payments.config.support.form.name')"
-                               :placeholder="userName"
-                               size="medium">
+                <sw-text-field
+                        {% if VUE3 %}
+                        v-model:value="name"
+                        {% else %}
+                        v-model="name"
+                        {% endif %}
+                        class="input-name"
+                        :label="$tc('mollie-payments.config.support.form.name')"
+                        :placeholder="userName"
+                        size="medium">
                 </sw-text-field>
-                <sw-email-field v-model:value="email" v-model="email"
-                                class="input-email"
-                                :label="$tc('mollie-payments.config.support.form.email')"
-                                :placeholder="user.email"
-                                size="medium">
+                <sw-email-field
+                        {% if VUE3 %}
+                        v-model:value="email"
+                        {% else %}
+                        v-model="email"
+                        {% endif %}
+                        class="input-email"
+                        :label="$tc('mollie-payments.config.support.form.email')"
+                        :placeholder="user.email"
+                        size="medium">
                 </sw-email-field>
             </sw-container>
-            <sw-single-select v-model:value="recipientLocale" v-model="recipientLocale"
-                              class="input-recepient"
-                              :label="$tc('mollie-payments.config.support.form.recipient')"
-                              :options="recipientOptions"
-                              size="medium">
+            <sw-single-select
+                    {% if VUE3 %}
+                    v-model:value="recipientLocale"
+                    {% else %}
+                    v-model="recipientLocale"
+                    {% endif %}
+                    class="input-recepient"
+                    :label="$tc('mollie-payments.config.support.form.recipient')"
+                    :options="recipientOptions"
+                    size="medium">
             </sw-single-select>
-            <sw-text-field v-model:value="subject"  v-model="subject"
-                           class="input-subject"
-                           :label="$tc('mollie-payments.config.support.form.subject')"
-                           size="medium">
+            <sw-text-field
+                    {% if VUE3 %}
+                    v-model:value="subject"
+                    {% else %}
+                    v-model="subject"
+                    {% endif %}
+                    class="input-subject"
+                    :label="$tc('mollie-payments.config.support.form.subject')"
+                    size="medium">
             </sw-text-field>
-            <sw-text-editor v-model="message"  v-model:value="message"  class="input-message"
-                            :label="$tc('mollie-payments.config.support.form.message')">
+            <sw-text-editor
+                    {% if VUE3 %}
+                    v-model:value="message"
+                    {% else %}
+                    v-model="message"
+                    {% endif %}
+                    class="input-message"
+                    :label="$tc('mollie-payments.config.support.form.message')">
             </sw-text-editor>
         </sw-container>
 
