--- a/src/Resources/app/administration/src/module/mollie-payments/components/mollie-ship-order/mollie-ship-order.html.twig
+++ b/src/Resources/app/administration/src/module/mollie-payments/components/mollie-ship-order/mollie-ship-order.html.twig
@@ -20,20 +20,26 @@
                       :showActions="false">
 
             <template #column-itemselect="{ item }">
-                <sw-checkbox-field v-if="item.originalQuantity > 0"
-                                   :bordered="false"
-                                   v-model="item.selected"
-                                   v-model:value="item.selected"
-                >
+                <sw-checkbox-field
+                        v-if="item.originalQuantity > 0"
+                        {% if VUE3 %}
+                        v-model:value="item.selected"
+                        {% else %}
+                        v-model="item.selected"
+                        {% endif %}
+                        :bordered="false">
                 </sw-checkbox-field>
             </template>
 
             <template #column-quantity="{ item }">
-                <sw-text-field :disabled="item.originalQuantity === 0"
-                               class="mollie-ship-order-grid-quantity"
-                               v-model="item.quantity"
-                               v-model:value="item.quantity"
-                >
+                <sw-text-field
+                        {% if VUE3 %}
+                        v-model:value="item.quantity"
+                        {% else %}
+                        v-model="item.quantity"
+                        {% endif %}
+                        :disabled="item.originalQuantity === 0"
+                        class="mollie-ship-order-grid-quantity">
                 </sw-text-field>
             </template>
 
@@ -52,10 +58,15 @@
     </sw-container>
 
     {% block sw_order_line_items_grid_grid_mollie_ship_item_modal_tracking %}
-        <sw-switch-field v-model:value="showTrackingInfo" v-model="showTrackingInfo"
-                         :label="$tc('mollie-payments.modals.shipping.showTracking')"
-                         :noMarginTop="true"
-                         size="small">
+        <sw-switch-field
+                {% if VUE3 %}
+                v-model:value="showTrackingInfo"
+                {% else %}
+                v-model="showTrackingInfo"
+                {% endif %}
+                :label="$tc('mollie-payments.modals.shipping.showTracking')"
+                :noMarginTop="true"
+                size="small">
         </sw-switch-field>
         <mollie-tracking-info v-if="showTrackingInfo"
                               :delivery="order.deliveries.first()"
