--- a/src/Resources/app/administration/src/module/mollie-payments/components/mollie-tracking-info/mollie-tracking-info.html.twig
+++ b/src/Resources/app/administration/src/module/mollie-payments/components/mollie-tracking-info/mollie-tracking-info.html.twig
@@ -18,20 +18,35 @@
         </sw-base-field>
 
         <sw-container columns="1fr" justify="start" gap="16px">
-            <sw-text-field v-model:value="tracking.carrier"  v-model="tracking.carrier"
-                           :label="$tc('mollie-payments.modals.shipping.tracking.carrier')"
-                           class="cy-trackiing-carrier"
-                           size="medium"
-                           required/>
-            <sw-text-field v-model:value="tracking.code" v-model="tracking.code"
-                           :label="$tc('mollie-payments.modals.shipping.tracking.code')"
-                           size="medium"
-                           class="cy-tracking-code"
-                           required/>
-            <sw-text-field v-model:value="tracking.url" v-model="tracking.url"
-                           size="medium"
-                           class="cy-tracking-url"
-                           :label="$tc('mollie-payments.modals.shipping.tracking.url')"/>
+            <sw-text-field
+                    {% if VUE3 %}
+                    v-model:value="tracking.carrier"
+                    {% else %}
+                    v-model="tracking.carrier"
+                    {% endif %}
+                    :label="$tc('mollie-payments.modals.shipping.tracking.carrier')"
+                    class="cy-trackiing-carrier"
+                    size="medium"
+                    required/>
+            <sw-text-field
+                    {% if VUE3 %}
+                    v-model:value="tracking.code"
+                    {% else %}
+                    v-model="tracking.code"
+                    {% endif %}
+                    :label="$tc('mollie-payments.modals.shipping.tracking.code')"
+                    size="medium"
+                    class="cy-tracking-code"
+                    required/>
+            <sw-text-field
+                    {% if VUE3 %}
+                    v-model:value="tracking.url"
+                    {% else %}
+                    v-model="tracking.url"
+                    {% endif %}
+                    size="medium"
+                    class="cy-tracking-url"
+                    :label="$tc('mollie-payments.modals.shipping.tracking.url')"/>
         </sw-container>
     </sw-container>
 {% endblock %}
