--- a/src/Resources/app/administration/src/module/mollie-payments/rules/mollie-lineitem-subscription-rule/mollie-lineitem-subscription-rule.html.twig
+++ b/src/Resources/app/administration/src/module/mollie-payments/rules/mollie-lineitem-subscription-rule/mollie-lineitem-subscription-rule.html.twig
@@ -1,10 +1,14 @@
 {% block sw_condition_value_content %}
-    <sw-single-select name="mollie-lineitem-subscription-rule"
-                      id="mollie-lineitem-subscription-rule"
-                      size="medium"
-                      :options="selectValues"
-                      v-model:value="isSubscription"
-                      v-model="isSubscription"
-                      class="field--main">
+    <sw-single-select
+            name="mollie-lineitem-subscription-rule"
+            id="mollie-lineitem-subscription-rule"
+            size="medium"
+            :options="selectValues"
+            {% if VUE3 %}
+            v-model:value="isSubscription"
+            {% else %}
+            v-model="isSubscription"
+            {% endif %}
+            class="field--main">
     </sw-single-select>
 {% endblock %}
